@@ -295,11 +295,13 @@ exclamation mark may be optionally also added to do a worldwide announcement.
 
 METACRAFT=<ABILITY>\
 Usage    : METACRAFT (EVERY) [ITEM NAME] ([MATERIAL NAME]) (TO SELF/HERE/FILE [FILENAME])\n\r\
+Usage    : METACRAFT ALL [SKILL NAME] ([MATERIAL NAME]) (TO SELF/HERE/FILE [FILENAME])\n\r\
 Example  : metacraft wagon oak\n\r\
 Example  : metacraft wagon\n\r\
 Example  : metacraft "every sword" bronze\n\r\
 Example  : metacraft "every sword"\n\r\
 Example  : metacraft "every sword" iron to file /items.cmare\n\r\
+Example  : metacraft "all carpentry"\n\r\
 This skill will allow you to create any item that is craftable from the numerous \
 common skills.  The item created may be made of a material specified, or automatically \
 crafted by a random material valid to the appropriate skill.  You can also specify \
