@@ -4,7 +4,8 @@
    3. POSSESS can now target a room or area
    4. Can now edit recipes of Construction, Masonry, Excavation, Landscaping, etc from CL or MG
    5. Save command will now prompt for confirmation with delta message.  
-   6. New channel flag: ACCOUNTOOCNOADMIN
+   6. New channel flag: ACCOUNTOOCNOADMIN - for a more nuanced Account Name-based channel
+   7. Metacraft can now craft everything from specific skills.  See help.
 # Build 5.9.1 Released 01/04/2016
    1. "Who accounts", used by an archon, can quickly list the account name of each player online.
    2. New Achievement event "GOTITEM", and new rewards (see new stats below and achievements.ini)
